# Linear-Regression-From-Scratch

./: README.md  linear_regression.py  notebook.ipynb  pyproject.toml
